discussion/kv_engine/162237/162237_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Introduce Checkpoint::queueMemOverhead

That accounts for the memory overhead of the Checkpoint::toWritw
container. In a follow-up patch that will logically replace any usage of
MemoryTrackingAllocator for the container.

Also, the new member type's MemoryCounter. Which means that with this
patch we start accounting the toWrite memory overhead into the
estimated checkpoint memory usage at all levels (bucket, vbucekt/CM,
checkpoint). That makes the estimate more accurate.

Change-Id: I34e05d88f57cfea9f2b68827bcde5bd031a9bf4d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-24 06:13:45.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-24 06:23:01.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40357/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(1598): error C2065: "perElementOverhead": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40357/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12802/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21: error: use of undeclared identifier "perElementOverhead" [clang-diagnostic-error]
    expectedSize += perElementOverhead;
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12802/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: use of undeclared identifier "perElementOverhead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12802/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2436/ : FAILURE

Compile error at [2021-09-24T06:14:47.215Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: use of undeclared identifier "perElementOverhead"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13556/ : FAILURE

Compile error at [2021-09-24T06:16:50.902Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: use of undeclared identifier "perElementOverhead"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13556/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14412/ : FAILURE

Compile error at [2021-09-24T06:16:16.565Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: ?perElementOverhead? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14412/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14671/ : FAILURE

Compile error at [2021-09-24T06:15:39.431Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: ?perElementOverhead? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14671/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15190/ : FAILURE

Compile error at [2021-09-24T06:15:39.069Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: use of undeclared identifier "perElementOverhead"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2469/ : FAILURE

Compile error at [2021-09-24T06:16:48.835Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: ?perElementOverhead? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2469/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22683/ : FAILURE

Compile error at [2021-09-24T06:15:50.959Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1598:21:
error: use of undeclared identifier "perElementOverhead"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22683/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11592/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
